--- a/index.html
+++ b/index.html
@@ -448,7 +448,6 @@ display: none;
 </div>
 
 
-<hr />
 <div id="thyroid-cancer-recurrence-prediction" class="section level1">
 <h1><strong>Thyroid cancer recurrence prediction</strong></h1>
 <p>Andre Nana</p>
@@ -1155,20 +1154,20 @@ summary(model.log)</code></pre>
 ## 
 ## Number of Fisher Scoring iterations: 3</code></pre>
 <pre class="r"><code>tbl_regression(model.log, exponentiate = TRUE)</code></pre>
-<div id="rgxixhvoxd" style="padding-left:0px;padding-right:0px;padding-top:10px;padding-bottom:10px;overflow-x:auto;overflow-y:auto;width:auto;height:auto;">
-<style>#rgxixhvoxd table {
+<div id="xuktfqsepn" style="padding-left:0px;padding-right:0px;padding-top:10px;padding-bottom:10px;overflow-x:auto;overflow-y:auto;width:auto;height:auto;">
+<style>#xuktfqsepn table {
 font-family: system-ui, 'Segoe UI', Roboto, Helvetica, Arial, sans-serif, 'Apple Color Emoji', 'Segoe UI Emoji', 'Segoe UI Symbol', 'Noto Color Emoji';
 -webkit-font-smoothing: antialiased;
 -moz-osx-font-smoothing: grayscale;
 }
-#rgxixhvoxd thead, #rgxixhvoxd tbody, #rgxixhvoxd tfoot, #rgxixhvoxd tr, #rgxixhvoxd td, #rgxixhvoxd th {
+#xuktfqsepn thead, #xuktfqsepn tbody, #xuktfqsepn tfoot, #xuktfqsepn tr, #xuktfqsepn td, #xuktfqsepn th {
 border-style: none;
 }
-#rgxixhvoxd p {
+#xuktfqsepn p {
 margin: 0;
 padding: 0;
 }
-#rgxixhvoxd .gt_table {
+#xuktfqsepn .gt_table {
 display: table;
 border-collapse: collapse;
 line-height: normal;
@@ -1193,11 +1192,11 @@ border-left-style: none;
 border-left-width: 2px;
 border-left-color: #D3D3D3;
 }
-#rgxixhvoxd .gt_caption {
+#xuktfqsepn .gt_caption {
 padding-top: 4px;
 padding-bottom: 4px;
 }
-#rgxixhvoxd .gt_title {
+#xuktfqsepn .gt_title {
 color: #333333;
 font-size: 125%;
 font-weight: initial;
@@ -1208,7 +1207,7 @@ padding-right: 5px;
 border-bottom-color: #FFFFFF;
 border-bottom-width: 0;
 }
-#rgxixhvoxd .gt_subtitle {
+#xuktfqsepn .gt_subtitle {
 color: #333333;
 font-size: 85%;
 font-weight: initial;
@@ -1219,7 +1218,7 @@ padding-right: 5px;
 border-top-color: #FFFFFF;
 border-top-width: 0;
 }
-#rgxixhvoxd .gt_heading {
+#xuktfqsepn .gt_heading {
 background-color: #FFFFFF;
 text-align: center;
 border-bottom-color: #FFFFFF;
@@ -1230,12 +1229,12 @@ border-right-style: none;
 border-right-width: 1px;
 border-right-color: #D3D3D3;
 }
-#rgxixhvoxd .gt_bottom_border {
+#xuktfqsepn .gt_bottom_border {
 border-bottom-style: solid;
 border-bottom-width: 2px;
 border-bottom-color: #D3D3D3;
 }
-#rgxixhvoxd .gt_col_headings {
+#xuktfqsepn .gt_col_headings {
 border-top-style: solid;
 border-top-width: 2px;
 border-top-color: #D3D3D3;
@@ -1249,7 +1248,7 @@ border-right-style: none;
 border-right-width: 1px;
 border-right-color: #D3D3D3;
 }
-#rgxixhvoxd .gt_col_heading {
+#xuktfqsepn .gt_col_heading {
 color: #333333;
 background-color: #FFFFFF;
 font-size: 100%;
@@ -1268,7 +1267,7 @@ padding-left: 5px;
 padding-right: 5px;
 overflow-x: hidden;
 }
-#rgxixhvoxd .gt_column_spanner_outer {
+#xuktfqsepn .gt_column_spanner_outer {
 color: #333333;
 background-color: #FFFFFF;
 font-size: 100%;
@@ -1279,13 +1278,13 @@ padding-bottom: 0;
 padding-left: 4px;
 padding-right: 4px;
 }
-#rgxixhvoxd .gt_column_spanner_outer:first-child {
+#xuktfqsepn .gt_column_spanner_outer:first-child {
 padding-left: 0;
 }
-#rgxixhvoxd .gt_column_spanner_outer:last-child {
+#xuktfqsepn .gt_column_spanner_outer:last-child {
 padding-right: 0;
 }
-#rgxixhvoxd .gt_column_spanner {
+#xuktfqsepn .gt_column_spanner {
 border-bottom-style: solid;
 border-bottom-width: 2px;
 border-bottom-color: #D3D3D3;
@@ -1296,10 +1295,10 @@ overflow-x: hidden;
 display: inline-block;
 width: 100%;
 }
-#rgxixhvoxd .gt_spanner_row {
+#xuktfqsepn .gt_spanner_row {
 border-bottom-style: hidden;
 }
-#rgxixhvoxd .gt_group_heading {
+#xuktfqsepn .gt_group_heading {
 padding-top: 8px;
 padding-bottom: 8px;
 padding-left: 5px;
@@ -1324,7 +1323,7 @@ border-right-color: #D3D3D3;
 vertical-align: middle;
 text-align: left;
 }
-#rgxixhvoxd .gt_empty_group_heading {
+#xuktfqsepn .gt_empty_group_heading {
 padding: 0.5px;
 color: #333333;
 background-color: #FFFFFF;
@@ -1338,13 +1337,13 @@ border-bottom-width: 2px;
 border-bottom-color: #D3D3D3;
 vertical-align: middle;
 }
-#rgxixhvoxd .gt_from_md > :first-child {
+#xuktfqsepn .gt_from_md > :first-child {
 margin-top: 0;
 }
-#rgxixhvoxd .gt_from_md > :last-child {
+#xuktfqsepn .gt_from_md > :last-child {
 margin-bottom: 0;
 }
-#rgxixhvoxd .gt_row {
+#xuktfqsepn .gt_row {
 padding-top: 8px;
 padding-bottom: 8px;
 padding-left: 5px;
@@ -1362,7 +1361,7 @@ border-right-color: #D3D3D3;
 vertical-align: middle;
 overflow-x: hidden;
 }
-#rgxixhvoxd .gt_stub {
+#xuktfqsepn .gt_stub {
 color: #333333;
 background-color: #FFFFFF;
 font-size: 100%;
@@ -1374,7 +1373,7 @@ border-right-color: #D3D3D3;
 padding-left: 5px;
 padding-right: 5px;
 }
-#rgxixhvoxd .gt_stub_row_group {
+#xuktfqsepn .gt_stub_row_group {
 color: #333333;
 background-color: #FFFFFF;
 font-size: 100%;
@@ -1387,13 +1386,13 @@ padding-left: 5px;
 padding-right: 5px;
 vertical-align: top;
 }
-#rgxixhvoxd .gt_row_group_first td {
+#xuktfqsepn .gt_row_group_first td {
 border-top-width: 2px;
 }
-#rgxixhvoxd .gt_row_group_first th {
+#xuktfqsepn .gt_row_group_first th {
 border-top-width: 2px;
 }
-#rgxixhvoxd .gt_summary_row {
+#xuktfqsepn .gt_summary_row {
 color: #333333;
 background-color: #FFFFFF;
 text-transform: inherit;
@@ -1402,14 +1401,14 @@ padding-bottom: 8px;
 padding-left: 5px;
 padding-right: 5px;
 }
-#rgxixhvoxd .gt_first_summary_row {
+#xuktfqsepn .gt_first_summary_row {
 border-top-style: solid;
 border-top-color: #D3D3D3;
 }
-#rgxixhvoxd .gt_first_summary_row.thick {
+#xuktfqsepn .gt_first_summary_row.thick {
 border-top-width: 2px;
 }
-#rgxixhvoxd .gt_last_summary_row {
+#xuktfqsepn .gt_last_summary_row {
 padding-top: 8px;
 padding-bottom: 8px;
 padding-left: 5px;
@@ -1418,7 +1417,7 @@ border-bottom-style: solid;
 border-bottom-width: 2px;
 border-bottom-color: #D3D3D3;
 }
-#rgxixhvoxd .gt_grand_summary_row {
+#xuktfqsepn .gt_grand_summary_row {
 color: #333333;
 background-color: #FFFFFF;
 text-transform: inherit;
@@ -1427,7 +1426,7 @@ padding-bottom: 8px;
 padding-left: 5px;
 padding-right: 5px;
 }
-#rgxixhvoxd .gt_first_grand_summary_row {
+#xuktfqsepn .gt_first_grand_summary_row {
 padding-top: 8px;
 padding-bottom: 8px;
 padding-left: 5px;
@@ -1436,7 +1435,7 @@ border-top-style: double;
 border-top-width: 6px;
 border-top-color: #D3D3D3;
 }
-#rgxixhvoxd .gt_last_grand_summary_row_top {
+#xuktfqsepn .gt_last_grand_summary_row_top {
 padding-top: 8px;
 padding-bottom: 8px;
 padding-left: 5px;
@@ -1445,10 +1444,10 @@ border-bottom-style: double;
 border-bottom-width: 6px;
 border-bottom-color: #D3D3D3;
 }
-#rgxixhvoxd .gt_striped {
+#xuktfqsepn .gt_striped {
 background-color: rgba(128, 128, 128, 0.05);
 }
-#rgxixhvoxd .gt_table_body {
+#xuktfqsepn .gt_table_body {
 border-top-style: solid;
 border-top-width: 2px;
 border-top-color: #D3D3D3;
@@ -1456,7 +1455,7 @@ border-bottom-style: solid;
 border-bottom-width: 2px;
 border-bottom-color: #D3D3D3;
 }
-#rgxixhvoxd .gt_footnotes {
+#xuktfqsepn .gt_footnotes {
 color: #333333;
 background-color: #FFFFFF;
 border-bottom-style: none;
@@ -1469,7 +1468,7 @@ border-right-style: none;
 border-right-width: 2px;
 border-right-color: #D3D3D3;
 }
-#rgxixhvoxd .gt_footnote {
+#xuktfqsepn .gt_footnote {
 margin: 0px;
 font-size: 90%;
 padding-top: 4px;
@@ -1477,7 +1476,7 @@ padding-bottom: 4px;
 padding-left: 5px;
 padding-right: 5px;
 }
-#rgxixhvoxd .gt_sourcenotes {
+#xuktfqsepn .gt_sourcenotes {
 color: #333333;
 background-color: #FFFFFF;
 border-bottom-style: none;
@@ -1490,64 +1489,64 @@ border-right-style: none;
 border-right-width: 2px;
 border-right-color: #D3D3D3;
 }
-#rgxixhvoxd .gt_sourcenote {
+#xuktfqsepn .gt_sourcenote {
 font-size: 90%;
 padding-top: 4px;
 padding-bottom: 4px;
 padding-left: 5px;
 padding-right: 5px;
 }
-#rgxixhvoxd .gt_left {
+#xuktfqsepn .gt_left {
 text-align: left;
 }
-#rgxixhvoxd .gt_center {
+#xuktfqsepn .gt_center {
 text-align: center;
 }
-#rgxixhvoxd .gt_right {
+#xuktfqsepn .gt_right {
 text-align: right;
 font-variant-numeric: tabular-nums;
 }
-#rgxixhvoxd .gt_font_normal {
+#xuktfqsepn .gt_font_normal {
 font-weight: normal;
 }
-#rgxixhvoxd .gt_font_bold {
+#xuktfqsepn .gt_font_bold {
 font-weight: bold;
 }
-#rgxixhvoxd .gt_font_italic {
+#xuktfqsepn .gt_font_italic {
 font-style: italic;
 }
-#rgxixhvoxd .gt_super {
+#xuktfqsepn .gt_super {
 font-size: 65%;
 }
-#rgxixhvoxd .gt_footnote_marks {
+#xuktfqsepn .gt_footnote_marks {
 font-size: 75%;
 vertical-align: 0.4em;
 position: initial;
 }
-#rgxixhvoxd .gt_asterisk {
+#xuktfqsepn .gt_asterisk {
 font-size: 100%;
 vertical-align: 0;
 }
-#rgxixhvoxd .gt_indent_1 {
+#xuktfqsepn .gt_indent_1 {
 text-indent: 5px;
 }
-#rgxixhvoxd .gt_indent_2 {
+#xuktfqsepn .gt_indent_2 {
 text-indent: 10px;
 }
-#rgxixhvoxd .gt_indent_3 {
+#xuktfqsepn .gt_indent_3 {
 text-indent: 15px;
 }
-#rgxixhvoxd .gt_indent_4 {
+#xuktfqsepn .gt_indent_4 {
 text-indent: 20px;
 }
-#rgxixhvoxd .gt_indent_5 {
+#xuktfqsepn .gt_indent_5 {
 text-indent: 25px;
 }
-#rgxixhvoxd .katex-display {
+#xuktfqsepn .katex-display {
 display: inline-flex !important;
 margin-bottom: 0.75em !important;
 }
-#rgxixhvoxd div.Reactable > div.rt-table > div.rt-thead > div.rt-tr.rt-tr-group-header > div.rt-th-group:after {
+#xuktfqsepn div.Reactable > div.rt-table > div.rt-thead > div.rt-tr.rt-tr-group-header > div.rt-th-group:after {
 height: 0px !important;
 }
 </style>
@@ -1640,7 +1639,7 @@ trainIndex &lt;- createDataPartition(tcr_ml[[outcome]], p = 0.8, list = FALSE)
 train_all &lt;- tcr_ml[trainIndex, ]
 test_all  &lt;- tcr_ml[-trainIndex, ]
 
-# 10-fold cross-validation
+# 5-fold cross-validation
 ctrl &lt;- trainControl(
   method = &quot;cv&quot;,
   number = 5,
@@ -1953,58 +1952,9 @@ imp_knn &lt;- permutation_importance(
   outcome      = outcome,
   loss         = &quot;ce&quot;,     # cross-entropy
   n_repetitions = 5
-)</code></pre>
-<pre><code>## Warning: package &#39;future&#39; was built under R version 4.4.3</code></pre>
-<pre><code>## Warning: package &#39;Rdpack&#39; was built under R version 4.4.3</code></pre>
-<pre><code>## Warning: package &#39;rlang&#39; was built under R version 4.4.3</code></pre>
-<pre><code>## Warning: package &#39;reshape2&#39; was built under R version 4.4.3</code></pre>
-<pre><code>## Warning: package &#39;rmarkdown&#39; was built under R version 4.4.3</code></pre>
-<pre><code>## Warning: package &#39;markdown&#39; was built under R version 4.4.3</code></pre>
-<pre><code>## Warning: package &#39;prodlim&#39; was built under R version 4.4.3</code></pre>
-<pre><code>## Warning: package &#39;haven&#39; was built under R version 4.4.3</code></pre>
-<pre><code>## Warning: package &#39;nloptr&#39; was built under R version 4.4.3</code></pre>
-<pre><code>## Warning: package &#39;xfun&#39; was built under R version 4.4.3</code></pre>
-<pre><code>## Warning: package &#39;labelled&#39; was built under R version 4.4.3</code></pre>
-<pre><code>## Warning: package &#39;litedown&#39; was built under R version 4.4.3</code></pre>
-<pre><code>## Warning: package &#39;jsonlite&#39; was built under R version 4.4.3</code></pre>
-<pre><code>## Warning: package &#39;recipes&#39; was built under R version 4.4.3</code></pre>
-<pre><code>## Warning: package &#39;broom&#39; was built under R version 4.4.3</code></pre>
-<pre><code>## Warning: package &#39;R6&#39; was built under R version 4.4.3</code></pre>
-<pre><code>## Warning: package &#39;bslib&#39; was built under R version 4.4.3</code></pre>
-<pre><code>## Warning: package &#39;parallelly&#39; was built under R version 4.4.3</code></pre>
-<pre><code>## Warning: package &#39;Rcpp&#39; was built under R version 4.4.3</code></pre>
-<pre><code>## Warning: package &#39;knitr&#39; was built under R version 4.4.3</code></pre>
-<pre><code>## Warning: package &#39;future.apply&#39; was built under R version 4.4.3</code></pre>
-<pre><code>## Warning: package &#39;Metrics&#39; was built under R version 4.4.3</code></pre>
-<pre><code>## Warning: package &#39;rstudioapi&#39; was built under R version 4.4.3</code></pre>
-<pre><code>## Warning: package &#39;withr&#39; was built under R version 4.4.3</code></pre>
-<pre><code>## Warning: package &#39;evaluate&#39; was built under R version 4.4.3</code></pre>
-<pre><code>## Warning: package &#39;survival&#39; was built under R version 4.4.3</code></pre>
-<pre><code>## Warning: package &#39;pillar&#39; was built under R version 4.4.3</code></pre>
-<pre><code>## Warning: package &#39;reformulas&#39; was built under R version 4.4.3</code></pre>
-<pre><code>## Warning: package &#39;generics&#39; was built under R version 4.4.3</code></pre>
-<pre><code>## Warning: package &#39;commonmark&#39; was built under R version 4.4.3</code></pre>
-<pre><code>## Warning: package &#39;scales&#39; was built under R version 4.4.3</code></pre>
-<pre><code>## Warning: package &#39;minqa&#39; was built under R version 4.4.3</code></pre>
-<pre><code>## Warning: package &#39;globals&#39; was built under R version 4.4.3</code></pre>
-<pre><code>## Warning: package &#39;glue&#39; was built under R version 4.4.3</code></pre>
-<pre><code>## Warning: package &#39;data.table&#39; was built under R version 4.4.3</code></pre>
-<pre><code>## Warning: package &#39;gower&#39; was built under R version 4.4.2</code></pre>
-<pre><code>## Warning: package &#39;rbibutils&#39; was built under R version 4.4.3</code></pre>
-<pre><code>## Warning: package &#39;cards&#39; was built under R version 4.4.3</code></pre>
-<pre><code>## Warning: package &#39;nlme&#39; was built under R version 4.4.3</code></pre>
-<pre><code>## Warning: package &#39;patchwork&#39; was built under R version 4.4.3</code></pre>
-<pre><code>## Warning: package &#39;cli&#39; was built under R version 4.4.3</code></pre>
-<pre><code>## Warning: package &#39;broom.helpers&#39; was built under R version 4.4.3</code></pre>
-<pre><code>## Warning: package &#39;gt&#39; was built under R version 4.4.3</code></pre>
-<pre><code>## Warning: package &#39;lava&#39; was built under R version 4.4.3</code></pre>
-<pre><code>## Warning: package &#39;gtable&#39; was built under R version 4.4.3</code></pre>
-<pre><code>## Warning: package &#39;sass&#39; was built under R version 4.4.3</code></pre>
-<pre><code>## Warning: package &#39;digest&#39; was built under R version 4.4.3</code></pre>
-<pre><code>## Warning: package &#39;htmltools&#39; was built under R version 4.4.3</code></pre>
-<pre><code>## Warning: package &#39;hardhat&#39; was built under R version 4.4.3</code></pre>
-<pre><code>## Warning: package &#39;MASS&#39; was built under R version 4.4.3</code></pre>
-<pre class="r"><code># Print results
+)
+
+# Print results
 print(imp_knn)</code></pre>
 <pre><code>## Interpretation method:  FeatureImp 
 ## error function: ce
